@@ -25,7 +25,6 @@ import java.io.IOException;
 import org.apache.commons.io.FileUtils;
 import org.apache.hadoop.fs.Path;
 import org.apache.pig.PigServer;
-import org.apache.pig.builtin.RoundRobinPartitioner;
 import org.apache.pig.test.Util;
 import org.junit.AfterClass;
 import org.junit.Before;
@@ -39,12 +38,16 @@ public class TestTezJobExecution {
 
     private static final String TEST_DIR = Util.getTestDirectory(TestTezJobExecution.class);
 
+    private static final String INPUT_FILE = TEST_DIR + Path.SEPARATOR + "input";
     private PigServer pigServer;
 
     @BeforeClass
     public static void oneTimeSetUp() throws Exception {
         Util.deleteDirectory(new File(TEST_DIR));
         new File(TEST_DIR).mkdirs();
+        Util.createLocalInputFile(INPUT_FILE, new String[] {
+            "1", "1", "1", "2", "2", "2"
+        });
     }
 
     @AfterClass
@@ -54,27 +57,21 @@ public class TestTezJobExecution {
 
     @Before
     public void setUp() throws Exception {
-        pigServer = new PigServer(Util.getLocalTestMode());
+        pigServer = new PigServer("tez_local");
     }
 
     @Test
-    public void testUnionParallelRoundRobinBatchSize() throws IOException {
-        String input = TEST_DIR + Path.SEPARATOR + "input1";
+    public void testUnionParallelHashValuePartition() throws IOException {
         String output = TEST_DIR + Path.SEPARATOR + "output1";
-        Util.createInputFile(pigServer.getPigContext(), input, new String[] {
-            "1", "1", "1", "2", "2", "2"
-        });
-        String query = "A = LOAD '" + input + "';"
-                + "B = LOAD '" + input + "';"
+        String query = "A = LOAD '" + INPUT_FILE + "';"
+                + "B = LOAD '" + INPUT_FILE + "';"
                 + "C = UNION A, B PARALLEL 2;"
                 + "STORE C into '" + output + "';";
-        pigServer.getPigContext().getProperties().setProperty(
-                RoundRobinPartitioner.PIG_ROUND_ROBIN_PARTITIONER_BATCH_SIZE, "3");
         pigServer.registerQuery(query);
         String part0 = FileUtils.readFileToString(new File(output + Path.SEPARATOR + "part-v002-o000-r-00000"));
         String part1 = FileUtils.readFileToString(new File(output + Path.SEPARATOR + "part-v002-o000-r-00001"));
-        assertEquals("1\n1\n1\n1\n1\n1\n", part0);
-        assertEquals("2\n2\n2\n2\n2\n2\n", part1);
+        assertEquals("2\n2\n2\n2\n2\n2\n", part0);
+        assertEquals("1\n1\n1\n1\n1\n1\n", part1);
     }
 
 }
